--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     restart: unless-stopped
     labels: 
       - traefik.enable=true
-      - traefik.backend=lazy
+      - traefik.backend=lazylibrarian
       - "traefik.frontend.rule=Host:lazy.${DOMAINNAME}"
       - traefik.port=5299
       - traefik.docker.network=traefik_proxy
