--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -358,7 +358,8 @@ services:
       - traefik.enable=true
       - traefik.backend=traefik
       - "traefik.frontend.rule=Host:traefik.${DOMAINNAME}"
-      - traefik.port=8282
+      # - traefik.port=8282
+       - traefik.port=8080
       - traefik.docker.network=traefik_proxy
       - traefik.frontend.headers.SSLRedirect=true
       - traefik.frontend.headers.STSSeconds=315360000
