--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ networks:
 services: 
   flex:
     container_name: flex
-    image: digitalhigh/flextv:latest
+    image: d8ahazard/flextv:latest
     volumes:
     - /mnt/storage/appdata/flex:/config
     environment:
@@ -100,7 +100,7 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
     container_name: netdata
-    image: netdata/netdata:latest
+    image: netdata/netdata:v1.15.0
     labels: 
       - traefik.enable=true
       - traefik.backend=netdata
@@ -166,7 +166,7 @@ services:
     volumes: 
       - "/var/run/docker.sock:/var/run/docker.sock"
   plex:
-    image: linuxserver/plex:latest
+    image: linuxserver/docker-plex:latest
     container_name: plex
     volumes:
       - /mnt/storage/media/download-reprocess:/download-reprocess
@@ -195,7 +195,7 @@ services:
       - "/mnt/storage/appdata/shared:/shared"
   portainer: 
     container_name: portainer
-    image: portainer/portainer:latest
+    image: portainer/portainer:release/1.20.1
     labels: 
       - traefik.enable=true
       - traefik.backend=portainer
