--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ networks:
 services: 
   flex:
     container_name: flex
-    image: d8ahazard/FlexTV:latest
+    image: digitalhigh/flextv:latest
     volumes:
     - /mnt/storage/appdata/flex:/config
     environment:
@@ -100,7 +100,7 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
     container_name: netdata
-    image: netdata/netdata:v1.15.0
+    image: netdata/netdata:latest
     labels: 
       - traefik.enable=true
       - traefik.backend=netdata
@@ -195,7 +195,7 @@ services:
       - "/mnt/storage/appdata/shared:/shared"
   portainer: 
     container_name: portainer
-    image: portainer/portainer:release/1.20.1
+    image: portainer/portainer:latest
     labels: 
       - traefik.enable=true
       - traefik.backend=portainer
