removed the RO from the docker socket for netdata

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,7 +123,7 @@ services:
     volumes: 
       - "/proc:/host/proc:ro"
       - "/sys:/host/sys:ro"
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "/var/run/docker.sock:/var/run/docker.sock"
       - "/mnt/storage/appdata/netdata:/etc/netdata"
   organizr: 
     container_name: organizr
