changed sonarr to 1.7 from latest

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -355,7 +355,7 @@ services:
       - "CF_API_EMAIL=${CLOUDFLARE_EMAIL}"
       - "CF_API_KEY=${CLOUDFLARE_API_KEY}"
     hostname: traefik
-    image: "traefik:latest"
+    image: "traefik:1.7"
     dns: 8.8.8.8
     labels: 
       - traefik.enable=true
