--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
   taisun:
     image: linuxserver/taisun
     container_name: taisun
-#    network_mode: bridge
+    ports:
+      - "3000:3000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
@@ -281,7 +282,8 @@ services:
     environment: 
       - "PUID=${PUID}"
       - "PGID=${PGID}"
-    image: linuxserver/radarr:latest
+    # image: linuxserver/radarr:latest
+    image: linuxserver/radarr:preview
     labels: 
       - traefik.enable=true
       - traefik.backend=radarr
@@ -337,8 +339,8 @@ services:
       - "/mnt/storage/appdata/shared:/shared"
   sonarr: 
     container_name: sonarr
-    depends_on: 
-      - sabnzbd
+#    depends_on: 
+#      - sabnzbd
     environment: 
       - "PUID=${PUID}"
       - "PGID=${PGID}"
