--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
 --- 
 version: "2"
-networks: 
-  default: 
+networks:
+  default:
     driver: bridge
+    ipam:
+      config:
+      - subnet: 172.16.239.0/24
   traefik_proxy: 
     external: 
       name: traefik_proxy
