--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -513,34 +513,34 @@ services:
       - default
       - traefik_proxy
     environment:
-      PROVIDERS_GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
-      PROVIDERS_GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
-      SECRET: ${OAUTH_SECRET}
-      COOKIE_DOMAIN: ${DOMAINNAME}
-      INSECURE_COOKIE: "false"
-      AUTH_HOST: oauth.${DOMAINNAME}
-      URL_PATH: /_oauth
-      WHITELIST: ${MY_EMAIL}
-      LOG_LEVEL: info
-      LIFETIME: 2592000 # 30 days
+      - "PROVIDERS_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}"
+      - "PROVIDERS_GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}"
+      - "SECRET=${OAUTH_SECRET}"
+      - "COOKIE_DOMAIN=${DOMAINNAME}"
+      - INSECURE_COOKIE="false"
+      - "AUTH_HOST=oauth.${DOMAINNAME}"
+      - URL_PATH=/_oauth
+      - "WHITELIST=${MY_EMAIL}"
+      - LOG_LEVEL=info
+      - LIFETIME=2592000 # 30 days
     labels:
-      traefik.enable: "true"
-      traefik.backend: oauth
-      traefik.port: 4181
-      traefik.frontend.rule: Host:oauth.${DOMAINNAME}
-      traefik.frontend.headers.SSLHost: oauth.${DOMAINNAME}
-      traefik.docker.network: traefik_proxy
-      traefik.frontend.passHostHeader: "true"
-      traefik.frontend.headers.SSLForceHost: "true"
-      traefik.frontend.headers.customResponseHeaders: X-Robots-Tag:noindex,nofollow,nosnippet,noarchive,notranslate,noimageindex
-      traefik.frontend.headers.SSLRedirect: "true"
-      traefik.frontend.headers.browserXSSFilter: "true"
-      traefik.frontend.headers.contentTypeNosniff: "true"
-      traefik.frontend.headers.forceSTSHeader: "true"
-      traefik.frontend.headers.STSSeconds: 315360000
-      traefik.frontend.headers.STSIncludeSubdomains: "true"
-      traefik.frontend.headers.STSPreload: "true"
-      traefik.frontend.headers.frameDeny: "true"
-      traefik.frontend.auth.forward.address: "http://oauth:4181"
-      traefik.frontend.auth.forward.authResponseHeaders: X-Forwarded-User
-      traefik.frontend.auth.forward.trustForwardHeader: "true"
+    - traefik.enable="true"
+    - traefik.backend=oauth
+    - traefik.port=4181
+    - "traefik.frontend.rule=Host:oauth.${DOMAINNAME}"
+    - "traefik.frontend.headers.SSLHost=oauth.${DOMAINNAME}"
+    - traefik.docker.network=traefik_proxy
+    - traefik.frontend.passHostHeader="true"
+    - traefik.frontend.headers.SSLForceHost="true"
+    - traefik.frontend.headers.customResponseHeaders=X-Robots-Tag:noindex,nofollow,nosnippet,noarchive,notranslate,noimageindex
+    - traefik.frontend.headers.SSLRedirect="true"
+    - traefik.frontend.headers.browserXSSFilter="true"
+    - traefik.frontend.headers.contentTypeNosniff="true"
+    - traefik.frontend.headers.forceSTSHeader="true"
+    - traefik.frontend.headers.STSSeconds=315360000
+    - traefik.frontend.headers.STSIncludeSubdomains="true"
+    - traefik.frontend.headers.STSPreload="true"
+    - traefik.frontend.headers.frameDeny="true"
+    - traefik.frontend.auth.forward.address="http://oauth:4181"
+    - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
+    - traefik.frontend.auth.forward.trustForwardHeader="true"
