--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -437,13 +437,13 @@ services:
       - traefik.frontend.headers.STSIncludeSubdomains=true
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=false
-      # - "traefik.frontend.auth.basic.users=${HTTP_USERNAME}:${HTTP_PASSWORD}"
+      - "traefik.frontend.auth.basic.users=${HTTP_USERNAME}:${HTTP_PASSWORD}"
       - traefik.frontend.auth.forward.address="http://oauth:4181"
       - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
       - traefik.frontend.auth.forward.trustForwardHeader="true"
-      networks: 
-      - default
-      - traefik_proxy
+    networks: 
+    - default
+    - traefik_proxy
     ports: 
       - "80:80"
       - "443:443"
