--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -438,9 +438,9 @@ services:
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=false
       - "traefik.frontend.auth.basic.users=${HTTP_USERNAME}:${HTTP_PASSWORD}"
-      - traefik.frontend.auth.forward.address="http://oauth:4181"
-      - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-      - traefik.frontend.auth.forward.trustForwardHeader="true"
+      # - traefik.frontend.auth.forward.address="http://oauth:4181"
+      # - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
+      # - traefik.frontend.auth.forward.trustForwardHeader="true"
     networks: 
     - default
     - traefik_proxy
