--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -165,7 +165,7 @@ services:
     labels: 
       - traefik.frontend.auth.forward.address="http://oauth.$DOMAINNAME:4181"
       - traefik.frontend.auth.forward.authResponseHeaders="X-Forwarded-User"
-      - traefik.frontend.auth.forward.trustForwardHeader="true"
+      - traefik.frontend.auth.forward.trustForwardHeader=true
       - traefik.enable=true
       - traefik.backend=netdata
       - "traefik.frontend.rule=Host:netdata.${DOMAINNAME}"
@@ -430,17 +430,17 @@ services:
       - traefik.docker.network=traefik_proxy
       - traefik.frontend.headers.SSLRedirect=true
       - traefik.frontend.headers.STSSeconds=315360000
-      - traefik.frontend.headers.browserXSSFilter="true"
-      - traefik.frontend.headers.contentTypeNosniff="true"
-      - traefik.frontend.headers.forceSTSHeader="true"
+      - traefik.frontend.headers.browserXSSFilter=true
+      - traefik.frontend.headers.contentTypeNosniff=true
+      - traefik.frontend.headers.forceSTSHeader=true
       - traefik.frontend.headers.SSLHost=frost.haus
-      - traefik.frontend.headers.STSIncludeSubdomains="true"
-      - traefik.frontend.headers.STSPreload="true"
+      - traefik.frontend.headers.STSIncludeSubdomains=true
+      - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny="false"
       - "traefik.frontend.auth.basic.users=${HTTP_USERNAME}:${HTTP_PASSWORD}"
       # - traefik.frontend.auth.forward.address="http://oauth:4181"
       # - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-      # - traefik.frontend.auth.forward.trustForwardHeader="true"
+      # - traefik.frontend.auth.forward.trustForwardHeader=true
     networks: 
     - default
     - traefik_proxy
@@ -534,17 +534,17 @@ services:
     - "traefik.frontend.rule=Host:oauth.${DOMAINNAME}"
     - "traefik.frontend.headers.SSLHost=oauth.${DOMAINNAME}"
     - traefik.docker.network=traefik_proxy
-    - traefik.frontend.passHostHeader="true"
-    - traefik.frontend.headers.SSLForceHost="true"
+    - traefik.frontend.passHostHeader=true
+    - traefik.frontend.headers.SSLForceHost=true
     - traefik.frontend.headers.customResponseHeaders=X-Robots-Tag:noindex,nofollow,nosnippet,noarchive,notranslate,noimageindex
-    - traefik.frontend.headers.SSLRedirect="true"
-    - traefik.frontend.headers.browserXSSFilter="true"
-    - traefik.frontend.headers.contentTypeNosniff="true"
-    - traefik.frontend.headers.forceSTSHeader="true"
+    - traefik.frontend.headers.SSLRedirect=true
+    - traefik.frontend.headers.browserXSSFilter=true
+    - traefik.frontend.headers.contentTypeNosniff=true
+    - traefik.frontend.headers.forceSTSHeader=true
     - traefik.frontend.headers.STSSeconds=315360000
-    - traefik.frontend.headers.STSIncludeSubdomains="true"
-    - traefik.frontend.headers.STSPreload="true"
-    - traefik.frontend.headers.frameDeny="true"
+    - traefik.frontend.headers.STSIncludeSubdomains=true
+    - traefik.frontend.headers.STSPreload=true
+    - traefik.frontend.headers.frameDeny=true
     - traefik.frontend.auth.forward.address="http://oauth:4181"
     - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-    - traefik.frontend.auth.forward.trustForwardHeader="true"
+    - traefik.frontend.auth.forward.trustForwardHeader=true
