--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -547,4 +547,4 @@ services:
       - traefik.frontend.headers.frameDeny=true
       - traefik.frontend.auth.forward.address="http://oauth:4181"
       - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-      - traefik.frontend.auth.forward.trustForwardHeader=true
+      - traefik.frontend.auth.forward.trustForwardHeader="true"
