--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -163,7 +163,7 @@ services:
     container_name: netdata
     image: netdata/netdata:latest
     labels: 
-      - traefik.frontend.auth.forward.address="http://oauth:4181"
+      - traefik.frontend.auth.forward.address=http://oauth:4181
       - traefik.frontend.auth.forward.authResponseHeaders="X-Forwarded-User"
       - traefik.frontend.auth.forward.trustForwardHeader=true
       - traefik.enable=true
@@ -438,7 +438,7 @@ services:
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=false
       - "traefik.frontend.auth.basic.users=${HTTP_USERNAME}:${HTTP_PASSWORD}"
-      # - traefik.frontend.auth.forward.address="http://oauth:4181"
+      # - traefik.frontend.auth.forward.address=http://oauth:4181
       # - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
       # - traefik.frontend.auth.forward.trustForwardHeader=true
     networks: 
@@ -545,6 +545,6 @@ services:
       - traefik.frontend.headers.STSIncludeSubdomains=true
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=true
-      - traefik.frontend.auth.forward.address="http://oauth:4181"
+      - traefik.frontend.auth.forward.address=http://oauth:4181
       - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-      - traefik.frontend.auth.forward.trustForwardHeader="true"
+      - traefik.frontend.auth.forward.trustForwardHeader=true
