--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -439,7 +439,7 @@ services:
       - traefik.frontend.headers.frameDeny=false
       - "traefik.frontend.auth.basic.users=${HTTP_USERNAME}:${HTTP_PASSWORD}"
       # - traefik.frontend.auth.forward.address=http://oauth:4181
-      # - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
+      # - traefik.frontend.auth.forward.authResponseHeaders="X-Forwarded-User"
       # - traefik.frontend.auth.forward.trustForwardHeader=true
     networks: 
     - default
@@ -487,10 +487,8 @@ services:
       - "PUID=${PUID}"
       - "PGID=${PGID}"
       - TZ=America/Chicago
-#      - CLI_ARGS= #optional
     volumes:
       - "/mnt/storage/appdata/duplicati:/config"
-#      - /path/to/backups:/backups
       - /mnt:/source
     restart: unless-stopped
     labels: 
@@ -546,5 +544,5 @@ services:
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=true
       - traefik.frontend.auth.forward.address=http://oauth:4181
-      - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
+      - traefik.frontend.auth.forward.authResponseHeaders="X-Forwarded-User"
       - traefik.frontend.auth.forward.trustForwardHeader=true
