--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -164,7 +164,7 @@ services:
     image: netdata/netdata:latest
     labels: 
       - traefik.frontend.auth.forward.address=http://oauth:4181
-      - traefik.frontend.auth.forward.authResponseHeaders="X-Forwarded-User"
+      - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
       - traefik.frontend.auth.forward.trustForwardHeader=true
       - traefik.enable=true
       - traefik.backend=netdata
@@ -439,7 +439,7 @@ services:
       - traefik.frontend.headers.frameDeny=false
       - "traefik.frontend.auth.basic.users=${HTTP_USERNAME}:${HTTP_PASSWORD}"
       # - traefik.frontend.auth.forward.address=http://oauth:4181
-      # - traefik.frontend.auth.forward.authResponseHeaders="X-Forwarded-User"
+      # - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
       # - traefik.frontend.auth.forward.trustForwardHeader=true
     networks: 
     - default
@@ -544,5 +544,5 @@ services:
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=true
       - traefik.frontend.auth.forward.address=http://oauth:4181
-      - traefik.frontend.auth.forward.authResponseHeaders="X-Forwarded-User"
+      - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
       - traefik.frontend.auth.forward.trustForwardHeader=true
