--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -163,7 +163,7 @@ services:
     container_name: netdata
     image: netdata/netdata:latest
     labels: 
-      - traefik.frontend.auth.forward.address=http://oauth:4181
+      - traefik.frontend.auth.forward.address=http://oauth.${DOMAINNAME}:4181
       - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
       - traefik.frontend.auth.forward.trustForwardHeader=true
       - traefik.enable=true
