--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -163,7 +163,7 @@ services:
     container_name: netdata
     image: netdata/netdata:latest
     labels: 
-      - traefik.frontend.auth.forward.address=http://oauth.${DOMAINNAME}:4181
+      - traefik.frontend.auth.forward.address=http://oauth:4181
       - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
       - traefik.frontend.auth.forward.trustForwardHeader=true
       - traefik.enable=true
@@ -515,14 +515,14 @@ services:
       - default
       - traefik_proxy
     environment:
-      - "PROVIDERS_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}"
-      - "PROVIDERS_GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}"
-      - "SECRET=${OAUTH_SECRET}"
-      - "COOKIE_DOMAIN=${DOMAINNAME}"
-      - INSECURE_COOKIE="false"
-      - "AUTH_HOST=oauth.${DOMAINNAME}"
+      - PROVIDERS_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - PROVIDERS_GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      - SECRET=${OAUTH_SECRET}
+      - COOKIE_DOMAIN=${DOMAINNAME}
+      - INSECURE_COOKIE=false
+      - AUTH_HOST=oauth.${DOMAINNAME}
       - URL_PATH=/_oauth
-      - "WHITELIST=${MY_EMAIL}"
+      - WHITELIST=${MY_EMAIL}
       - LOG_LEVEL=info
       - LIFETIME=2592000 # 30 days
     labels:
