--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,9 @@ services:
       - /mnt/storage/media/downloads:/downloads
     restart: unless-stopped
     labels:
+      - traefik.frontend.auth.forward.address=http://oauth:4181
+      - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
+      - traefik.frontend.auth.forward.trustForwardHeader=true      
       - traefik.enable=true
       - traefik.backend=hydra2
       - "traefik.frontend.rule=Host:hydra2.${DOMAINNAME}"
