--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     restart: unless-stopped
     labels:
       - traefik.frontend.auth.forward.address=http://oauth:4181
-      - traefik.frontend.auth.forward.authResponseHeaders="X-Forwarded-User"
+      - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
       - traefik.frontend.auth.forward.trustForwardHeader=true      
       - traefik.enable=true
       - traefik.backend=hydra2
