--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -439,11 +439,20 @@ services:
       - traefik.frontend.headers.SSLHost=frost.haus
       - traefik.frontend.headers.STSIncludeSubdomains=true
       - traefik.frontend.headers.STSPreload=true
-      - traefik.frontend.headers.frameDeny=false
-      - "traefik.frontend.auth.basic.users=${HTTP_USERNAME}:${HTTP_PASSWORD}"
-      # - traefik.frontend.auth.forward.address=http://oauth:4181
-      # - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
-      # - traefik.frontend.auth.forward.trustForwardHeader=true
+      # - traefik.frontend.headers.frameDeny=false
+      # - "traefik.frontend.auth.basic.users=${HTTP_USERNAME}:${HTTP_PASSWORD}"
+      - traefik.frontend.auth.forward.address=http://oauth:4181
+      - traefik.frontend.auth.forward.authResponseHeaders=X-Forwarded-User
+      - traefik.frontend.auth.forward.trustForwardHeader=true
+      # New starts here
+      - traefik.protocol=http
+      - "traefik.frontend.headers.SSLHost=traefik.${DOMAINNAME}"
+      - traefik.frontend.passHostHeader=true
+      - traefik.frontend.headers.SSLForceHost=true
+      - traefik.frontend.headers.browserXSSFilter=true
+      - traefik.frontend.headers.customResponseHeaders=X-Robots-Tag:noindex,nofollow,nosnippet,noarchive,notranslate,noimageindex
+      - traefik.frontend.headers.frameDeny=true
+      - "traefik.frontend.headers.customFrameOptionsValue=allow-from https:${DOMAINNAME}"
     networks: 
     - default
     - traefik_proxy
